# sudoku-solver

./: .editorconfig  .gitignore  pyproject.toml
soduku_solver/: boards.py  formatter.py  solver.py
tests/: conftest.py  test_boards.py  test_formatter.py  test_soduku_solver.py  test_solver.py
